...
        android:layout_marginTop="70dp"
        fab:layout_constraintEnd_toEndOf="parent"
        fab:layout_constraintStart_toStartOf="parent"
        fab:layout_constraintTop_toBottomOf="@+id/done_notes"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/overview_back_all_notes_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dip"
        android:layout_marginStart="335dp"
        android:tint="@color/white"
...
