...
    <string name="tag_deletition_confirmation">Are you sure you want to delete the Tags</string>
    <string name="pin_note">Pin Note</string>
    <string name="unpin_note">Unpin Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="mark_as_done">Mark Note as done</string>
    <string name="unmark_as_done">Unmark Note as done</string>
    <string name="send_via_email">Send via e-mail</string>
    <string name="date">Date</string>
    <string name="Cancel">Cancel</string>
    <string name="delete_all_tags_confirmation">Are you sure you want to delete all stored notes?</string>
    <string name="stored_notes_to_device">Stored Notes to Device</string>
    <string name="no_notes_to_export">No Notes to export!</string>
    <string name="title_desc">Title desc</string>
...
