...
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/overview_item_more_btn"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            style="?android:attr/actionOverflowButtonStyle"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
